day 5 the end project

--- a/src/components/bem-blocks/_instrument--catalog.html
+++ b/src/components/bem-blocks/_instrument--catalog.html
@@ -1,3 +1,24 @@
 <li class="instrument instrument--catalog">
+	<svg class="instrument__icon" width="22" height="20" viewbox="0 0 22 20" fill="none"
+		xmlns="http://www.w3.org/2000/svg">
+		<path fill-rule="evenodd" clip-rule="evenodd"
+			d="M19.5194 2.612C18.5286 1.58 17.1856 1 15.785 1C14.3843 1 13.0413 1.58 12.0506 2.612L11.033 3.67203L10.0154 2.612C7.95328 0.464 4.60864 0.464 2.54656 2.612C0.48448 4.76 0.48448 8.24403 2.54656 10.392L3.56416 11.452L11.033 19.232L18.5018 11.452L19.5194 10.392C20.5101 9.36003 21.0669 7.96101 21.0669 6.50201C21.0669 5.04301 20.5101 3.644 19.5194 2.612Z"
+			fill="white" stroke="#CCCCCC" stroke-linecap="round" stroke-linejoin="round" />
+	</svg>
+	<svg class="instrument__add-icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
+		xmlns="http://www.w3.org/2000/svg">
+		<rect x="0.5" y="0.5" width="23" height="23" rx="7.5" fill="white" />
+		<path d="M12.0413 7.87521V16.1248" stroke="#CCCCCC" stroke-width="2" stroke-linecap="round" />
+		<path d="M7.9165 12H16.1661" stroke="#CCCCCC" stroke-width="2" stroke-linecap="round" />
+		<rect x="0.5" y="0.5" width="23" height="23" rx="7.5" stroke="#CCCCCC" />
+	</svg>
+	<svg class="instrument__choosen-icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
+		xmlns="http://www.w3.org/2000/svg">
+		<rect x="0.5" y="0.5" width="23" height="23" rx="7.5" fill="#EF4545" />
+		<path d="M17.8334 9.08337L11.4167 15.5" stroke="white" stroke-width="2" stroke-linecap="round" />
+		<path d="M7.33325 11.4166L11.4166 15.5" stroke="white" stroke-width="2" stroke-linecap="round" />
+		<rect x="0.5" y="0.5" width="23" height="23" rx="7.5" stroke="#EF4545" />
+	</svg>
+
 	<img class="instrument__img" src="@@instrumentImg" alt="instrument">
 </li>
