--- a/src/components/bem-blocks/_news-item.html
+++ b/src/components/bem-blocks/_news-item.html
@@ -8,24 +8,24 @@
 		</p>
 	</a>
 
-	<div class="news-item__feedback">
-		<button class="news-item__like">
-			<svg class="news-item__like-icon" width="16" height="14" viewBox="0 0 16 14" xmlns="http://www.w3.org/2000/svg">
+	<div class="feedback">
+		<button class="feedback__like">
+			<svg class="feedback__like-icon" width="16" height="14" viewBox="0 0 16 14" xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd" clip-rule="evenodd"
 					d="M13.6796 2.07467C13.0192 1.38667 12.1238 1 11.19 1C10.2563 1 9.36092 1.38667 8.70044 2.07467L8.02204 2.78135L7.34364 2.07467C5.96892 0.642666 3.73916 0.642666 2.36444 2.07467C0.989725 3.50667 0.989725 5.82935 2.36444 7.26135L3.04284 7.96802L8.02204 13.1547L13.0012 7.96802L13.6796 7.26135C14.3401 6.57335 14.7113 5.64068 14.7113 4.66801C14.7113 3.69534 14.3401 2.76267 13.6796 2.07467Z"
 					stroke="#CCCCCC" stroke-linecap="round" stroke-linejoin="round" />
 			</svg>
-			<span class="news-item__label">Like</span>
-			<span class="news-item__like-num">@@like-num</span>
+			<span class="feedback__label">Like</span>
+			<span class="feedback__like-num">@@like-num</span>
 		</button>
-		<a class="news-item__comment" href="#">
-			<svg class="news-item__comment-icon" width="14" height="14" viewBox="0 0 14 14" fill="none"
+		<a class="feedback__comment" href="#">
+			<svg class="feedback__comment-icon" width="14" height="14" viewBox="0 0 14 14" fill="none"
 				xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd" clip-rule="evenodd"
 					d="M13 6.66668C13.002 7.54668 12.7967 8.41467 12.4 9.20001C11.4407 11.1193 9.47933 12.3327 7.33333 12.3333C6.45333 12.3353 5.58534 12.13 4.80001 11.7334L1 13L2.26666 9.20001C1.87 8.41467 1.66467 7.54668 1.66667 6.66668C1.66733 4.52068 2.88067 2.55934 4.80001 1.60001C5.58534 1.20334 6.45333 0.998014 7.33333 1.00001H7.66667C10.544 1.15868 12.8413 3.45601 13 6.33335V6.66668Z"
 					stroke="#808080" stroke-linecap="round" stroke-linejoin="round" />
 			</svg>
-			<span class="news-item__comment-num">@@comment-num</span>
+			<span class="feedback__comment-num">@@comment-num</span>
 		</a>
 	</div>
 </li>
