--- a/src/components/page-blocks/_header--login.html
+++ b/src/components/page-blocks/_header--login.html
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="container">
 		<nav class="header__nav">
-			<a class="logo" href="#">
+			<a class="logo" href="/">
 				<img src="img/logo.svg" alt="logo">
 			</a>
 
@@ -43,7 +43,7 @@
 					</div> -->
 
 					<div class="authorized">
-						<a class="authorized__favourite" href="#">
+						<a class="authorized__favourite" href="/favorite.html">
 							Favourites
 						</a>
 						<div class="authorized__account">
