--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="container">
 		<nav class="header__nav">
-			<a class="logo" href="#">
+			<a class="logo" href="/">
 				<img src="img/logo.svg" alt="logo">
 			</a>
 
@@ -34,7 +34,7 @@
 					</div> -->
 
 					<div class="login">
-						<a class="login__link button" href="#">
+						<a class="login__link button popup-link" href="#sign-in">
 							Login
 						</a>
 					</div>
