--- a/src/components/page-blocks/_schools.html
+++ b/src/components/page-blocks/_schools.html
@@ -3,7 +3,7 @@
 		<div class="schools__inner">
 			<div class="schools__top">
 				<h1 class="schools__title title">Schools</h1>
-				<a class="schools__suggest" href="#">Suggest school</a>
+				<a class="schools__suggest popup-link" href="#schools-form">Suggest school</a>
 			</div>
 
 			<ul class="schools__list">
