--- a/src/components/page-blocks/_welcome.html
+++ b/src/components/page-blocks/_welcome.html
@@ -36,14 +36,14 @@
 
 					<ul class="materials__list">
 						<li class="materials__item">
-							<a class="materials__link materials__link--schools --svg__arrow-right" href="#">
+							<a class="materials__link materials__link--schools --svg__arrow-right" href="/schools.html">
 								<span class="materials__link-name">Schools</span>
 								<span class="materials__link-descr">The best schools</span>
 							</a>
 						</li>
 
 						<li class="materials__item">
-							<a class="materials__link materials__link--news --svg__arrow-right" href="#">
+							<a class="materials__link materials__link--news --svg__arrow-right" href="/news.html">
 								<span class="materials__link-name">News</span>
 								<span class="materials__link-descr">All the newest details</span>
 							</a>
