--- a/src/components/bem-blocks/_instrument.html
+++ b/src/components/bem-blocks/_instrument.html
@@ -5,7 +5,7 @@
 		<div class="popup__body ">
 			<div class="popup__content ">
 				<a class="popup__close close-popup" href="#">
-					<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<g opacity="0.5">
 							<path d="M19 6L5 20" stroke="#333333" stroke-width="2" stroke-linecap="round" />
 							<path d="M5 6L19 20" stroke="#333333" stroke-width="2" stroke-linecap="round" />
@@ -26,7 +26,7 @@
 							Easy to use screen capture app for windows and macOS
 						</p>
 
-						<a class="popup__card-link button" href="#">
+						<a class="popup__card-link button" href="/catalog.html">
 							Explore
 						</a>
 
