--- a/src/components/page-blocks/_header--favorite.html
+++ b/src/components/page-blocks/_header--favorite.html
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="container">
 		<nav class="header__nav">
-			<a class="logo" href="#">
+			<a class="logo" href="/">
 				<img src="img/logo.svg" alt="logo">
 			</a>
 
