--- a/src/scss/bem-blocks/_authorized.scss
+++ b/src/scss/bem-blocks/_authorized.scss
@@ -14,9 +14,10 @@
     font-size: 0;
     @extend %montserrat-500;
     background-image: url('../img/favorite.svg');
+    background-repeat: no-repeat;
     background-size: contain;
-    width: 1rem;
-    height: 0.875rem;
+    width: 0.836rem;
+    height: 0.759rem;
 
     @include _768 {
         display: none;
@@ -42,6 +43,7 @@
     @extend %montserrat-500;
     line-height: 1;
     color: #ffffff;
+    font-size: 1rem;
     background-color: #a6ca59;
     border-radius: 50%;
     cursor: pointer;
@@ -79,10 +81,11 @@
 
 .authorized__info {
     .authorized__portrain {
-        margin-right: 16px;
+        margin-right: 1rem;
         cursor: initial;
 
         @include _768 {
+            margin-right: 16px;
             display: flex;
         }
     }
