--- a/src/scss/bem-blocks/_demo-instruments.scss
+++ b/src/scss/bem-blocks/_demo-instruments.scss
@@ -1,6 +1,6 @@
 .demo-instruments {
-    margin-bottom: 40px;
-    height: 192px;
+    margin-bottom: 2.5rem;
+    height: 12rem;
     display: flex;
     justify-content: center;
     align-items: center;
