--- a/src/scss/bem-blocks/_demonstration.scss
+++ b/src/scss/bem-blocks/_demonstration.scss
@@ -1,17 +1,17 @@
 .demonstration {
     position: relative;
-    padding: 36px 38px;
+    padding: 2.25rem 2.375rem;
     box-shadow: 0px 3px 28px rgba(0, 0, 0, 0.06);
     border-radius: 8px;
 }
 
 .demonstration__example {
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 .demonstration__example > span {
     position: relative;
-    padding: 5px 1px;
+    padding: 0.313rem 0.063rem;
     background-color: #fde0e0;
 }
 
@@ -20,7 +20,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 2px;
+    height: 0.125rem;
     background-color: #f00000;
     border-radius: 2px;
     content: '';
@@ -28,11 +28,11 @@
 
 .demonstration__tooltip {
     position: absolute;
-    left: 15px;
-    top: 66px;
-    max-width: 260px;
+    left: 0.938rem;
+    top: 4.125rem;
+    max-width: 16.25rem;
     width: 100%;
-    padding: 17px 19px 15px;
+    padding: 1.063rem 1.188rem 0.938rem;
     position: absolute;
     background-color: white;
     box-shadow: 2px 2px 13px rgba(0, 0, 0, 0.11);
@@ -45,14 +45,14 @@
 }
 
 .demonstration__comment {
-    margin-bottom: 10px;
-    font-size: 14px;
+    margin-bottom: 0.625rem;
+    font-size: 0.875rem;
     color: #aab0c8;
     @extend %montserrat-500;
 }
 
 .demonstration__correct {
     color: #17c69d;
-    font-size: 20px;
+    font-size: 1.25rem;
     @extend %montserrat-500;
 }
