--- a/src/scss/bem-blocks/_materials.scss
+++ b/src/scss/bem-blocks/_materials.scss
@@ -1,6 +1,6 @@
 .materials__promo {
-    margin-bottom: 50px;
-    padding: 32px 40px;
+    margin-bottom: 3.125rem;
+    padding: 2rem 2.5rem;
     display: flex;
     align-items: center;
     background-color: #f6f7f7;
@@ -29,7 +29,11 @@
 }
 
 .materials__content {
-    margin-right: 70px;
+    margin-right: 4.375rem;
+
+    @include _979 {
+        margin-right: 1.375rem;
+    }
 
     @include _630 {
         margin-right: 0;
@@ -37,11 +41,15 @@
 }
 
 .materials__label {
-    margin-bottom: 4px;
+    margin-bottom: 0.25rem;
     display: block;
     @extend %montserrat-500;
     color: black;
-    font-size: 12px;
+    font-size: 0.75rem;
+
+    @include _768 {
+        font-size: 12px;
+    }
 
     @include _630 {
         text-align: center;
@@ -49,7 +57,7 @@
 }
 
 .materials__name {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
     display: block;
     @extend %montserrat-600;
     color: $accent;
@@ -61,8 +69,8 @@
 }
 
 .materials__promo-link {
-    padding: 5px 16px;
-    max-width: 86px;
+    padding: 0.313rem 1rem;
+    max-width: 5.375rem;
     display: flex;
     justify-content: center;
 
@@ -90,7 +98,7 @@
 }
 
 .materials__item {
-    max-width: 240px;
+    max-width: 15rem;
     width: 100%;
 
     @include _768 {
@@ -109,8 +117,7 @@
 }
 
 .materials__link {
-    padding: 26px 24px;
-
+    padding: 1.625rem 1.5rem;
     display: block;
     color: white;
     border-radius: 16px;
@@ -129,6 +136,10 @@
             box-shadow: 0px 3px 28px rgba(0, 0, 0, 0.06);
         }
     }
+
+    @include _768 {
+        padding: 26px 24px;
+    }
 }
 
 .materials__link-name,
@@ -137,11 +148,15 @@
 }
 
 .materials__link-name {
-    margin-bottom: 4px;
+    margin-bottom: 0.25rem;
 }
 
 .materials__link-descr {
-    font-size: 12px;
+    font-size: 0.75rem;
+
+    @include _768 {
+        font-size: 12px;
+    }
 }
 
 .--svg__arrow-right {
