--- a/src/scss/bem-blocks/_search.scss
+++ b/src/scss/bem-blocks/_search.scss
@@ -1,6 +1,6 @@
 .search {
-    margin-bottom: 40px;
-    max-width: 417px;
+    margin-bottom: 2.5rem;
+    max-width: 26.063rem;
     box-shadow: 0px 3px 28px rgba(0, 0, 0, 0.06);
     border-radius: 0px 0px 16px 16px;
 }
@@ -12,16 +12,16 @@
 }
 
 .search__query {
-    padding-left: 38px;
-    padding-right: 30px;
-    height: 48px;
+    padding-left: 2.375rem;
+    padding-right: 1.875rem;
+    height: 3rem;
     display: flex;
     align-items: center;
-    font-size: 14px;
+    font-size: 0.875rem;
     @extend %montserrat-500;
     background-image: url('../img/zoom.svg');
     background-repeat: no-repeat;
-    background-position: 14px center;
+    background-position: 0.875rem center;
     border-right: none;
     white-space: nowrap;
 }
@@ -31,11 +31,11 @@
 }
 
 .search__results {
-    padding: 16px;
+    padding: 1rem;
 }
 
 .search__result {
-    margin-bottom: 11px;
+    margin-bottom: 0.688rem;
     display: flex;
     justify-content: space-between;
 }
@@ -53,10 +53,10 @@
 }
 
 .search__text span {
-    padding: 6px 1px;
+    padding: 0.125rem 0.063rem;
     background-color: #fff5cc;
 }
 
 .search__btn {
-    padding: 12px 32px;
+    padding: 0.75rem 2rem;
 }
