--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -1,6 +1,22 @@
 html {
     box-sizing: border-box;
     font-size: 16px;
+
+    @include _1440 {
+        font-size: 15px;
+    }
+
+    @include _1366 {
+        font-size: 14px;
+    }
+
+    @include _1024 {
+        font-size: 13px;
+    }
+
+    @include _979 {
+        font-size: 12px;
+    }
 }
 
 *,
@@ -9,7 +25,6 @@ html {
     box-sizing: inherit;
 }
 
-html,
 body,
 div,
 span,
@@ -155,11 +170,19 @@ body {
 }
 
 .container {
-    @include container(1362px, 1rem);
+    @include container(85.125rem, 1rem);
+
+    &--blog {
+        @include container(49rem, 1rem);
+    }
+
+    @include _768 {
+        @include container(85.125rem, 16px);
+    }
 }
 
 .format {
-    padding-top: 70px;
+    padding-top: 4.375rem;
 
     @include _768 {
         padding-top: 16px;
@@ -167,15 +190,10 @@ body {
 }
 
 .title {
-    margin-bottom: 55px;
+    margin-bottom: 3.438rem;
     color: black;
     @extend %montserrat-700;
-    font-size: 40px;
-
-    @include _979 {
-        margin-bottom: 45px;
-        font-size: 32px;
-    }
+    font-size: 2.5rem;
 
     @include _768 {
         margin-bottom: 38px;
