--- a/src/scss/page-blocks/_news.scss
+++ b/src/scss/page-blocks/_news.scss
@@ -6,7 +6,7 @@
     }
 
     @include _768 {
-        padding-bottom: 3rem;
+        padding-bottom: 48px;
     }
 }
 
@@ -28,9 +28,9 @@
     }
 
     @include _768 {
-        margin-bottom: 2.5rem;
+        margin-bottom: 40px;
         grid-template-columns: repeat(2, 1fr);
-        grid-row-gap: 2.5rem;
+        grid-row-gap: 40px;
     }
 
     @include _630 {
