--- a/src/scss/page-blocks/_schools.scss
+++ b/src/scss/page-blocks/_schools.scss
@@ -6,7 +6,7 @@
     }
 
     @include _768 {
-        padding-bottom: 3rem;
+        padding-bottom: 48px;
     }
 }
 
@@ -27,7 +27,7 @@
 
     @include _768 {
         margin-bottom: 32px;
-        font-size: 32px;
+        font-size: 24px;
         width: 100%;
     }
 }
@@ -41,6 +41,7 @@
 
     @include _768 {
         width: 100%;
+        font-size: 16px;
         text-align: center;
     }
 }
@@ -57,8 +58,8 @@
     }
 
     @include _768 {
-        margin-bottom: 2.5rem;
+        margin-bottom: 40px;
         grid-template-columns: 1fr;
-        grid-row-gap: 2.5rem;
+        grid-row-gap: 40px;
     }
 }
