--- a/src/scss/page-blocks/_welcome.scss
+++ b/src/scss/page-blocks/_welcome.scss
@@ -1,5 +1,5 @@
 .welcome {
-    padding-bottom: 86px;
+    padding-bottom: 5.375rem;
 
     @include _768 {
         padding: 24px 0 80px;
@@ -15,7 +15,7 @@
 }
 
 .welcome__content {
-    max-width: 512px;
+    max-width: 32rem;
     @include _1366 {
         margin: 0 auto 70px;
     }
@@ -33,24 +33,33 @@
 }
 
 .welcome__subject {
-    margin-bottom: 24px;
-    padding: 12px 80px 12px 12px;
+    margin-bottom: 1.5rem;
+    padding: 0.75rem 5rem 0.75rem 0.75rem;
     display: inline-block;
     color: black;
     @extend %montserrat-600;
-    font-size: 14px;
+    font-size: 0.875rem;
     background-image: url('../img/decor.png');
     background-repeat: no-repeat;
     background-position: right 12px center;
     box-shadow: 0px 3px 28px rgba(0, 0, 0, 0.06);
     border-radius: 8px;
+
+    @include _979 {
+        padding: 0.75rem 6rem 0.75rem 0.75rem;
+    }
+
+    @include _768 {
+        margin-bottom: 24px;
+        padding: 12px 80px 12px 12px;
+    }
 }
 
 .welcome__title {
-    margin-bottom: 40px;
+    margin-bottom: 2.5rem;
     @extend %montserrat-700;
     color: black;
-    font-size: 56px;
+    font-size: 3.5rem;
     line-height: 1.2;
 
     @include _768 {
@@ -60,13 +69,15 @@
 }
 
 .welcome__descr {
-    margin-bottom: 80px;
-    max-width: 370px;
-    font-size: 14px;
+    margin-bottom: 5rem;
+    max-width: 23.125rem;
+    font-size: 0.875rem;
     line-height: 1.5;
     @extend %montserrat-500;
 
     @include _768 {
+        margin-bottom: 80px;
+        font-size: 14px;
         text-align: center;
     }
 }
@@ -77,7 +88,7 @@
 }
 
 .welcome__steps {
-    padding-top: 15px;
+    padding-top: 0.938rem;
     display: flex;
     @include _1366 {
         margin: 0 auto;
