--- a/src/components/bem-blocks/_instrument--catalog.html
+++ b/src/components/bem-blocks/_instrument--catalog.html
@@ -1,4 +1,4 @@
-<li class="instrument instrument--catalog">
+<a class="instrument instrument--catalog popup-link" href="instrument-@@instrumentnum">
 	<svg class="instrument__icon" width="22" height="20" viewbox="0 0 22 20" fill="none"
 		xmlns="http://www.w3.org/2000/svg">
 		<path fill-rule="evenodd" clip-rule="evenodd"
@@ -21,4 +21,22 @@
 	</svg>
 
 	<img class="instrument__img" src="@@instrumentImg" alt="instrument">
-</li>
+
+	<div id="instrument-@@instrumentnum" class="popup ">
+		<div class="popup__body ">
+			<div class="popup__content ">
+				<a href="#" class="popup__close close-popup">
+					<svg class="popup__close-icon" xmlns="http://www.w3.org/2000/" svg, viewbox="0 0 352 512">
+						<path
+							d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z">
+						</path>
+					</svg>
+				</a>
+				<div class="popup__title">lorem</div>
+				<div class="popup__info ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat similique
+					repellendus explicabo nihil obcaecati nobis laudantium nisi, accusantium quisquam architecto blanditiis.
+					Minima inventore suscipit sed saepe voluptates fugit facilis nihil?</div>
+			</div>
+		</div>
+	</div>
+</a>
