--- a/src/components/bem-blocks/_schools-item.html
+++ b/src/components/bem-blocks/_schools-item.html
@@ -1,11 +1,11 @@
 <li class="schools-item @@isLiked">
-	<a class="schools-item__link" href="/blog-one.html">
+	<span class="schools-item__link" href="/blog-one.html">
 		<img class="schools-item__img" src="@@news-image" alt="news-image">
 		<span class="schools-item__title">@@news-title</span>
 		<p class="schools-item__preview">
 			Some news preview for brief announce in the news card in 2 or 3 lines for more information
 		</p>
-	</a>
+	</span>
 
 	<div class="feedback">
 		<button class="feedback__like">
