--- a/src/components/page-blocks/_catalog.html
+++ b/src/components/page-blocks/_catalog.html
@@ -423,26 +423,26 @@
 					<div class="catalog__items">
 						<ul class="catalog__list">
 							@@loop('../bem-blocks/_instrument--catalog.html', [
-							{"instrumentImg": "img/instrument-1.png"},
-							{"instrumentImg": "img/instrument-2.png"},
-							{"instrumentImg": "img/instrument-3.png"},
-							{"instrumentImg": "img/instrument-4.png"},
-							{"instrumentImg": "img/instrument-5.png"},
-							{"instrumentImg": "img/instrument-6.png"},
-							{"instrumentImg": "img/instrument-7.png"},
-							{"instrumentImg": "img/instrument-8.png"},
-							{"instrumentImg": "img/instrument-9.png"},
-							{"instrumentImg": "img/instrument-10.png"},
-							{"instrumentImg": "img/instrument-11.png"},
-							{"instrumentImg": "img/instrument-12.png"},
-							{"instrumentImg": "img/instrument-13.png"},
-							{"instrumentImg": "img/instrument-14.png"},
-							{"instrumentImg": "img/instrument-4.png"},
-							{"instrumentImg": "img/instrument-5.png"},
-							{"instrumentImg": "img/instrument-9.png"},
-							{"instrumentImg": "img/instrument-8.png"},
-							{"instrumentImg": "img/instrument-13.png"},
-							{"instrumentImg": "img/instrument-2.png"},
+							{"instrumentImg": "img/instrument-1.png", instrumentnum: 1},
+							{"instrumentImg": "img/instrument-2.png", instrumentnum: 2},
+							{"instrumentImg": "img/instrument-3.png", instrumentnum: 3},
+							{"instrumentImg": "img/instrument-4.png", instrumentnum: 4},
+							{"instrumentImg": "img/instrument-5.png", instrumentnum: 5},
+							{"instrumentImg": "img/instrument-6.png", instrumentnum: 6},
+							{"instrumentImg": "img/instrument-7.png", instrumentnum: 7},
+							{"instrumentImg": "img/instrument-8.png", instrumentnum: 8},
+							{"instrumentImg": "img/instrument-9.png", instrumentnum: 9},
+							{"instrumentImg": "img/instrument-10.png", instrumentnum: 10},
+							{"instrumentImg": "img/instrument-11.png", instrumentnum: 11},
+							{"instrumentImg": "img/instrument-12.png", instrumentnum: 12},
+							{"instrumentImg": "img/instrument-13.png", instrumentnum: 13},
+							{"instrumentImg": "img/instrument-14.png", instrumentnum: 14},
+							{"instrumentImg": "img/instrument-4.png", instrumentnum: 15},
+							{"instrumentImg": "img/instrument-5.png", instrumentnum: 16},
+							{"instrumentImg": "img/instrument-9.png", instrumentnum: 17},
+							{"instrumentImg": "img/instrument-8.png", instrumentnum: 18},
+							{"instrumentImg": "img/instrument-13.png", instrumentnum: 19},
+							{"instrumentImg": "img/instrument-2.png", instrumentnum: 20},
 							])
 						</ul>
 
