--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header lock-padding">
 	<div class="container">
 		<nav class="header__nav">
 			<a class="logo" href="/">
