--- a/src/scss/page-blocks/_header.scss
+++ b/src/scss/page-blocks/_header.scss
@@ -1,3 +1,12 @@
+.header {
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #ffffff;
+}
+
 .header__nav {
     padding: 2.063rem 0 0.563rem;
     display: flex;
