--- a/src/scss/page-blocks/_welcome.scss
+++ b/src/scss/page-blocks/_welcome.scss
@@ -98,3 +98,33 @@
         display: none;
     }
 }
+
+.steps__item {
+    opacity: 0;
+    animation-name: start;
+    animation-fill-mode: forwards;
+    animation-duration: 1.5s;
+}
+
+.steps__item:nth-child(1) {
+    animation-delay: 0.5s;
+}
+
+.steps__item:nth-child(2) {
+    animation-delay: 1s;
+}
+
+.steps__item:nth-child(3) {
+    animation-delay: 1.5s;
+}
+
+@keyframes start {
+    0% {
+        transform: translateX(70%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
